# spanishVoiceCoach

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  SpanishConversationCoachGoals.md  claudeSpanishCoachPlan.md  docker-compose.yml  fly.toml  pyproject.toml
backend/: coach.py  flashcards_store.py  main.py  pronunciation_service.py  session.py  stt.py  translation_service.py  tts.py  tts_helpers.py  turn_service.py
backend/ai/: base.py  claude.py  google.py  json_utils.py  openai.py  registry.py
backend/data/: flashcard_deck.json  pronunciation_challenges.json
docs/: android-setup.md  claudeCodeImplementationPlan.md  claudePlanIssue3and4Review.md  codePlansAndGoalsReview.md  codexCodeReview.md  codexGrowthPlan.md  initPlanReviewCodex.md  manualTestLog.md  manualTestPlan.md  projectStatus.md  windows-setup.md
docs/archive/: codexSpanishCoachPlan.md
docs/specs/: 2026-04-15-phase0-sprint-backlog.md
docs/superpowers/plans/: 2026-04-20-phase-3-coaching-layer.md  2026-04-20-phase2-ai-conversation-core.md  2026-04-21-phase4-session-config-ui.md  (+10 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.css  App.jsx  index.css
tests/integration/: test_flashcard_generate.py  test_turn_pipeline.py
tests/unit/: test_ai_providers.py  test_auth.py  test_coach.py  test_flashcard_parser.py  test_flashcard_store.py  test_flashcards.py  test_pronunciation.py  test_session.py  test_session_cache.py  test_stt.py  test_translate.py  test_tts.py  test_tts_helpers.py
(+46 files in other folders)
