[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duovoicecoach"
version = "0.1.0"
description = "A voice-first AI Spanish conversation coach"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "openai-whisper>=20240930",
    "anthropic>=0.49",
    "openai>=1.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28",
    "aiofiles>=24",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.26",
    "gtts>=2.5.4",
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow — require real API keys, deselect with '-m \"not slow\"'",
]
